manifests/use-cases-common-default-ns/08-sni-based-routing/dp-sni-tls.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-sni
  labels:
    app: backend-sni
    service: backend-sni
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend-sni
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-sni
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-sni
      version: v1
  template:
    metadata:
      labels:
        app: backend-sni
        version: v1
    spec:
      serviceAccountName: backend-sni
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: backend-sni
          ports:
            - containerPort: 3000
