manifests/use-cases-common-default-ns/08-sni-based-routing/httpr-sni.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-sni
spec:
  parentRefs:
    - name: sni-gateway
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend-sni
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
